# rust-xdr

xdr-codec/: Cargo.toml
xdr-codec/src/: error.rs  lib.rs  record.rs  test.rs
xdr-codec/tests/: quickcheck.rs
xdrgen/: Cargo.toml
xdrgen/example/src/: simple.rs
xdrgen/src/: lib.rs  xdrgen.rs
xdrgen/src/spec/: mod.rs  xdr_nom.rs
xdrgen/tests/: lib.rs
